# hyper-linux

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  USAGE.md  elf.c  elf.h  flake.nix  fork_ipc.c  fork_ipc.h  futex.c  futex.h  guest.c  guest.h  hl.1  hl.c  hv_util.h  proc_emulation.c  shim.S  stack.c  stack.h  syscall.c  syscall.h  syscall_exec.c  syscall_fd.c  syscall_fs.c  syscall_fs.h  syscall_inotify.c  syscall_internal.h  syscall_io.c  syscall_io.h  syscall_net.c  syscall_net.h  syscall_poll.c  syscall_poll.h  syscall_proc.c  (+12 more)
Formula/: hl.rb
docs/: FINDINGS.md
hello-hyper/: Main.hs  hello-hyper.cabal
lode/: rosetta.md
nix/: guest-bins.nix  haskell.nix  lib.nix
site/: index.html  install.sh  style.css
src/: crash_report.c  crash_report.h  elf.c  elf.h  fork_ipc.c  futex.c  futex.h  gdb_stub.c  gdb_stub.h  guest.c  guest.h  hl.c  hv_util.h  proc_emulation.c  proc_emulation.h  rosetta.c  rosetta.h  shim.S  stack.c  stack.h  syscall.c  syscall.h  syscall_exec.c  syscall_exec.h  syscall_fd.c  syscall_fd.h  syscall_fs.c  syscall_fs.h  syscall_inotify.c  syscall_inotify.h  syscall_internal.h  syscall_io.c  syscall_io.h  syscall_net.c  syscall_net.h  syscall_poll.c  syscall_poll.h  syscall_proc.c  syscall_proc.h  syscall_signal.c  (+8 more)
test/: echo-test.c  hello-dynamic.c  hello-musl.c  hello-write.c  hello-x86_64.S  hello.S  raw-syscall.h  simple-x86_64.ld  simple.ld  test-argc.c  test-busybox.sh  test-cat.c  test-cloexec.c  test-complex.c  test-comprehensive.c  test-coreutils.sh  test-cow-fork.c  test-epoll.c  (+40 more)
(+3 files in other folders)
